--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "peerDependencies": {
     "serialport": "^3.1.2",
     "wiring-pi": "^2.1.1"
+  },
+  "dependencies": {
+    "buffer-builder": "^0.2.0"
   }
 }
