--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   ],
   "author": "Joe Ferner <joe@fernsroth.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "serialport": "^3.1.2",
-    "wiring-pi": "^2.1.1"
-  },
+  "peerDependencies": {},
   "dependencies": {
-    "buffer-builder": "^0.2.0"
+    "buffer-builder": "^0.2.0",
+    "nested-error-stacks": "^2.0.1",
+    "node-wiring-pi": "0.0.4",
+    "serialport": "^6.2.1"
   }
 }
